--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ⚡ lang="id-ID" itemscope="itemscope" itemtype="https://schema.org/WebPage">
   <head>
+    <meta name="google-site-verification" content="j3tXWPYvJhWSxnfehekc8MsTuDb-H18k2DXFEVwIV5o" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,maximum-scale=1" />
     <meta http-equiv="content-language" content="id" />
